fixed hidden text in ended hunts in dark mode

--- a/client/src/app/endedHunts/ended-hunt-card.component.scss
+++ b/client/src/app/endedHunts/ended-hunt-card.component.scss
@@ -40,3 +40,19 @@
   display: flex;
   justify-content: flex-end;
 }
+
+.ended-hunt-card-name {
+  color: #0056b3;
+
+  @media (prefers-color-scheme: dark) {
+    color: #0056b3;
+  }
+}
+
+.ended-hunt-card-description {
+  color: #0056b3;
+
+  @media (prefers-color-scheme: dark) {
+    color: #0056b3;
+  }
+}
